--- a/about.html
+++ b/about.html
@@ -21,26 +21,30 @@
     <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
 
-  <section class="about">
-    <div class="about-container">
-      <div class="about-text">
-        <h2>Sobre o Projeto</h2>
-        <p>
-          O <strong>Gameshelf</strong> nasceu da ideia de unir a paixão por jogos eletrônicos com a curiosidade tecnológica de estudantes do 
-          <strong>Instituto Federal de Alagoas</strong>. A proposta é criar uma plataforma simples e divertida para que jogadores possam 
-          compartilhar suas experiências, avaliar títulos e descobrir novas aventuras.
-        </p>
-        <p>
-          O projeto Front-End foi desenvolvido com <strong>HTML, CSS e JavaScript puro</strong>, focando na praticidade e na interação direta com o navegador, 
-          sem necessidade de cadastros ou bancos de dados externos. Assim, cada jogador mantém suas informações com segurança e facilidade.
-        </p>
+  <!-- CONTEÚDO PRINCIPAL -->
+  <main>
+    <section class="about">
+      <div class="about-container">
+        <div class="about-text">
+          <h2>Sobre o Projeto</h2>
+          <p>
+            O <strong>Gameshelf</strong> nasceu da ideia de unir a paixão por jogos eletrônicos com a curiosidade tecnológica de estudantes do 
+            <strong>Instituto Federal de Alagoas</strong>. A proposta é criar uma plataforma simples e divertida para que jogadores possam 
+            compartilhar suas experiências, avaliar títulos e descobrir novas aventuras.
+          </p>
+          <p>
+            O projeto Front-End foi desenvolvido com <strong>HTML, CSS e JavaScript puro</strong>, focando na praticidade e na interação direta com o navegador, 
+            sem necessidade de cadastros ou bancos de dados externos. Assim, cada jogador mantém suas informações com segurança e facilidade.
+          </p>
+        </div>
+        <div class="about-image">
+          <img src="img/game.jpg" alt="Ilustração de jogos">
+        </div>
       </div>
-      <div class="about-image">
-        <img src="img/game.jpg" alt="Ilustração de jogos">
-      </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
+  <!-- FOOTER -->
   <footer>
     <div class="footer-content">
       <img src="img/image.png" alt="Logo Gameshelf" class="footer-logo">
