--- a/avaliacao.html
+++ b/avaliacao.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avaliações - Gameshelf</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="avaliacoes.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <header class="navbar">
