--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,6 @@
   <header class="navbar">
     <div class="logo"><a href="index.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <a href="about.html">Sobre</a>
       <div class="logo-icon">
         <img src="gamepad-icon.svg" alt="Ícone Gamepad">
       </div>
@@ -24,7 +23,7 @@
     <div class="login-box">
       <h2>Crie sua conta</h2>
       <p class="login-subtitle">Preencha os campos abaixo para se cadastrar.</p>
-      <form class="login-form">
+      <form class="cadastro-form">
         <div class="input-group">
           <label for="name">Nome completo</label>
           <input type="text" id="name" placeholder="Ex: Italo Carlo" required>
