--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro - Gameshelf</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <header class="navbar">
@@ -19,10 +19,10 @@
     <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
 
-  <section class="login-section">
-    <div class="login-box">
+  <section class="cadastro-section">
+    <div class="cadastro-box">
       <h2>Crie sua conta</h2>
-      <p class="login-subtitle">Preencha os campos abaixo para se cadastrar.</p>
+      <p class="cadastro-subtitle">Preencha os campos abaixo para se cadastrar.</p>
       <form class="cadastro-form">
         <div class="input-group">
           <label for="name">Nome completo</label>
@@ -44,7 +44,7 @@
           <input type="password" id="confirm-password" placeholder="••••••••" required>
         </div>
 
-        <button type="submit" class="login-button">Cadastrar</button>
+        <button type="submit" class="cadastro-button">Cadastrar</button>
       </form>
       <p class="register-text">Já tem conta? <a href="login.html">Entrar</a></p>
     </div>
@@ -57,6 +57,7 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="/scripts/cadastro.js"></script>
+  <script src="/scripts/utils.js"></script>
 </body>
 </html>
