--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Gameshelf</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <header class="navbar">
@@ -47,6 +47,7 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="/scripts/login.js"></script>
+  <script src="/scripts/utils.js"></script>
 </body>
 </html>
