Melhorias no fluxo do site com a adição das páginas de Login e cadastro. 'Meu perfil' foi inplementado e dados do usuário agora podem ser visualizados pelo mesmo

--- a/avaliacao.html
+++ b/avaliacao.html
@@ -8,13 +8,11 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo"><a href="index.html">GAMESHELF</a></div>
+    <div class="logo"><a href="jogos.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <div class="logo-icon">
-        <img src="gamepad-icon.svg" alt="Ícone Gamepad">
-      </div>
-      <a href="login.html">Login</a>
-      <a href="cadastro.html">Cadastro</a>
+      <a href="jogos.html">Catálogo</a>
+      <a href="meu-perfil.html">Meu Perfil</a>
+      <a href="#" onclick="logout()">Sair</a>
     </nav>
     <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
