--- a/cadastro.html
+++ b/cadastro.html
@@ -10,13 +10,6 @@
 <body>
   <header class="navbar">
     <div class="logo"><a href="index.html">GAMESHELF</a></div>
-    <nav class="nav-links">
-      <div class="logo-icon">
-        <img src="gamepad-icon.svg" alt="Ícone Gamepad">
-      </div>
-      <a href="login.html">Login</a>
-    </nav>
-    <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
 
   <section class="cadastro-section">
@@ -57,7 +50,7 @@
     </div>
   </footer>
 
-  <script src="/scripts/cadastro.js"></script>
-  <script src="/scripts/utils.js"></script>
+  <script type="module" src="/scripts/cadastro.js"></script>
+  <script type="module" src="/scripts/utils.js"></script>
 </body>
 </html>
