--- a/jogos.html
+++ b/jogos.html
@@ -12,9 +12,11 @@
   <header class="navbar">
     <div class="logo"><a href="index.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <a href="avaliacao.html">Minhas Avaliações</a>
+      <a href="avaliacao.html">Avaliar jogos</a>
+      <a href="meu-perfil.html">Meu Perfil</a>
       <a href="#" onclick="logout()">Sair</a>
     </nav>
+    <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
 
   <section class="hero" style="height: 30vh; min-height: 200px;">
