--- a/login.html
+++ b/login.html
@@ -10,15 +10,6 @@
 <body>
   <header class="navbar">
     <div class="logo"><a href="index.html">GAMESHELF</a></div>
-    <nav class="nav-links">
-      <div class="logo-icon">
-        <img src="gamepad-icon.svg" alt="Ícone Gamepad">
-      </div>
-      <a href="login.html" class="active">Login</a>
-      <a href="cadastro.html">Cadastro</a>
-    </nav>
-
-    <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
 
   <section class="login-section">
@@ -47,7 +38,7 @@
     </div>
   </footer>
 
-  <script src="/scripts/login.js"></script>
-  <script src="/scripts/utils.js"></script>
+  <script type="module" src="/scripts/login.js"></script>
+  <script type="module" src="/scripts/utils.js"></script>
 </body>
 </html>
