Avaliação de games funcionando em conjunto com a API

--- a/avaliacao.html
+++ b/avaliacao.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo"><a href="jogos.html">GAMESHELF</a></div>
+    <div class="logo"><a href="catalogo.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <a href="jogos.html">Catálogo</a>
+      <a href="catalogo.html">Catálogo</a>
       <a href="meu-perfil.html">Meu Perfil</a>
       <a href="#" onclick="logout()">Sair</a>
     </nav>
