--- a/catalogo.html
+++ b/catalogo.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catálogo de Jogos - Gameshelf</title>
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/jogos.css">
+  <link rel="stylesheet" href="/css/catalogo.css">
 </head>
 
 <body>
   <header class="navbar">
-    <div class="logo"><a href="index.html">GAMESHELF</a></div>
+    <div class="logo"><a href="catalogo.html">GAMESHELF</a></div>
     <nav class="nav-links">
       <a href="avaliacao.html">Avaliar jogos</a>
       <a href="meu-perfil.html">Meu Perfil</a>
@@ -29,7 +29,7 @@
     <p style="color:white">Carregando catálogo...</p>
   </div>
 
-  <script type="module" src="/scripts/jogos.js"></script>
+  <script type="module" src="/scripts/catalogo.js"></script>
   <script type="module" src="/scripts/utils.js"></script>
 </body>
 </html>
