--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo"><a href="jogos.html">GAMESHELF</a></div>
+    <div class="logo"><a href="catalogo.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <a href="jogos.html">Catálogo</a>
+      <a href="catalogo.html">Catálogo</a>
       <a href="avaliacao.html">Fazer Avaliação</a>
       <a href="meu-perfil.html" class="active">Meu Perfil</a>
       <a href="#" onclick="logout()">Sair</a>
