Barra de buscar jogos adicionada

--- a/catalogo.html
+++ b/catalogo.html
@@ -21,6 +21,10 @@
   <section class="hero" style="height: 30vh; min-height: 200px;">
     <div class="hero-content">
       <h1>Catálogo de Jogos</h1>
+      <div class="search-bar">
+        <input type="text" id="search-input" placeholder="Pesquisar por título...">
+        <button id="search-btn">Buscar</button>
+      </div>
     </div>
   </section>
 
