Home Page adicionada no projeto

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo"><a href="index.html">GAMESHELF</a></div>
+    <div class="logo"><a href="homepage.html">GAMESHELF</a></div>
   </header>
 
   <section class="cadastro-section">
