--- a/game-detail.html
+++ b/game-detail.html
@@ -10,9 +10,9 @@
 
 <body>
   <header class="navbar">
-    <div class="logo"><a href="catalogo.html">GAMESHELF</a></div>
+    <div class="logo"><a href="homepage.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <a href="catalogo.html">Catálogo</a>
+      <a href="homepage.html">Homepage</a>
       <a href="meu-perfil.html">Meu Perfil</a>
       <a href="#" onclick="logout()">Sair</a>
     </nav>
