--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -9,10 +9,9 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo"><a href="catalogo.html">GAMESHELF</a></div>
+    <div class="logo"><a href="homepage.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <a href="catalogo.html">Catálogo</a>
-      <a href="meu-perfil.html" class="active">Meu Perfil</a>
+      <a href="homepage.html">Homepage</a>
       <a href="#" onclick="logout()">Sair</a>
     </nav>
     <div class="menu-toggle" id="menu-toggle">☰</div>
