Design e interação das páginas foram melhoradads

--- a/game-detail.html
+++ b/game-detail.html
@@ -6,6 +6,7 @@
   <title>Detalhes do Jogo - Gameshelf</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/game-detail.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
     <nav class="nav-links">
       <a href="homepage.html">Homepage</a>
       <a href="meu-perfil.html">Meu Perfil</a>
-      <a href="#" onclick="logout()">Sair</a>
+      <a href="#" class="logout-btn" onclick="logout()">Sair</a>
     </nav>
   </header>
 
