--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -6,13 +6,14 @@
   <title>Meu Perfil - Gameshelf</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/meu-perfil.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="navbar">
     <div class="logo"><a href="homepage.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <a href="homepage.html">Homepage</a>
-      <a href="#" onclick="logout()">Sair</a>
+      <a href="homepage.html">Home page</a>
+      <a href="#" class="logout-btn" onclick="logout()">Sair</a>
     </nav>
     <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
