--- a/avaliacao.html
+++ b/avaliacao.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avaliações - Gameshelf</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="navbar">
-    <div class="logo"><a href="catalogo.html">GAMESHELF</a></div>
+    <div class="logo"><a href="homepage.html">GAMESHELF</a></div>
     <nav class="nav-links">
-      <a href="catalogo.html">Catálogo</a>
+      <a href="homepage.html">Home page</a>
       <a href="meu-perfil.html">Meu Perfil</a>
-      <a href="#" onclick="logout()">Sair</a>
+      <a href="#" class="logout-btn" onclick="logout()">Sair</a>
     </nav>
     <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
