--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
     <div class="logo"><a href="homepage.html">GAMESHELF</a></div>
     <nav class="nav-links">
       <a href="meu-perfil.html">Meu Perfil</a>
-      <a href="#" onclick="logout()">Sair</a>
+      <a href="#" onclick="logout()" class="logout-btn">Sair</a>
     </nav>
     <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
