Design geral foi aprimorado. Usuários podem ver qual o jogo que foi avaliado somente entrando na página de 'Meu perfil'

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo"><a href="homepage.html">GAMESHELF</a></div>
+    <div class="logo"><a href="index.html">GAMESHELF</a></div>
   </header>
 
   <section class="cadastro-section">
@@ -19,22 +19,22 @@
       <form class="cadastro-form">
         <div class="input-group">
           <label for="name">Nome completo</label>
-          <input type="text" id="name" placeholder="Ex: Italo Carlo" required>
+          <input type="text" id="name" placeholder="Nome" required>
         </div>
 
         <div class="input-group">
           <label for="email">E-mail</label>
-          <input type="email" id="email" placeholder="seuemail@email.com" required>
+          <input type="email" id="email" placeholder="example@gmail.com" required>
         </div>
 
         <div class="input-group">
           <label for="password">Senha</label>
-          <input type="password" id="password" placeholder="••••••••" required>
+          <input type="password" id="password" required>
         </div>
 
         <div class="input-group">
           <label for="confirm-password">Confirmar senha</label>
-          <input type="password" id="confirm-password" placeholder="••••••••" required>
+          <input type="password" id="confirm-password" required>
         </div>
 
         <button type="submit" class="cadastro-button">Cadastrar</button>
