--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo"><a href="homepage.html">GAMESHELF</a></div>
+    <div class="logo"><a href="index.html">GAMESHELF</a></div>
   </header>
 
   <section class="login-section">
@@ -19,11 +19,11 @@
       <form class="login-form">
         <div class="input-group">
           <label for="email">E-mail</label>
-          <input type="email" id="email" placeholder="seuemail@email.com" required>
+          <input type="email" id="email" placeholder="example@gmail.com" required>
         </div>
         <div class="input-group">
           <label for="password">Senha</label>
-          <input type="password" id="password" placeholder="••••••••" required>
+          <input type="password" id="password" required>
         </div>
         <button type="submit" class="login-button">Entrar</button>
       </form>
