--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro - Gameshelf</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="navbar">
@@ -50,7 +50,7 @@
     </div>
   </footer>
 
-  <script type="module" src="/scripts/cadastro.js"></script>
-  <script type="module" src="/scripts/utils.js"></script>
+  <script type="module" src="scripts/cadastro.js"></script>
+  <script type="module" src="scripts/utils.js"></script>
 </body>
 </html>
