--- a/homepage.html
+++ b/homepage.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gameshelf - Descubra & Avalie</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/homepage.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/homepage.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 
@@ -74,7 +74,7 @@
     </div>
   </footer>
 
-  <script type="module" src="/scripts/utils.js"></script>
-  <script type="module" src="/scripts/homepage.js"></script>
+  <script type="module" src="scripts/utils.js"></script>
+  <script type="module" src="scripts/homepage.js"></script>
 </body>
 </html>
