--- a/avaliacao.html
+++ b/avaliacao.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avaliações - Gameshelf</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/avaliacao.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/avaliacao.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -55,7 +55,7 @@
     </div>
   </footer>
 
-  <script type="module" src="/scripts/utils.js"></script>
-  <script type="module" defer src="/scripts/avaliacao.js"></script>
+  <script type="module" src="scripts/utils.js"></script>
+  <script type="module" defer src="scripts/avaliacao.js"></script>
 </body>
 </html>
