--- a/game-detail.html
+++ b/game-detail.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detalhes do Jogo - Gameshelf</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/game-detail.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/game-detail.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 
@@ -61,7 +61,7 @@
     </section>
   </main>
 
-  <script type="module" src="/scripts/utils.js"></script>
-  <script type="module" src="/scripts/game-detail.js"></script>
+  <script type="module" src="scripts/utils.js"></script>
+  <script type="module" src="scripts/game-detail.js"></script>
 </body>
 </html>
