--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meu Perfil - Gameshelf</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/meu-perfil.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/meu-perfil.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -59,7 +59,7 @@
     </div>
   </section>
 
-  <script type="module" src="/scripts/utils.js"></script>
-  <script type="module" src="/scripts/perfil.js"></script>
+  <script type="module" src="scripts/utils.js"></script>
+  <script type="module" src="scripts/perfil.js"></script>
 </body>
 </html>
