togle bar configurada para mobile users

--- a/game-detail.html
+++ b/game-detail.html
@@ -17,6 +17,7 @@
       <a href="meu-perfil.html">Meu Perfil</a>
       <a href="#" class="logout-btn" onclick="logout()">Sair</a>
     </nav>
+    <div class="menu-toggle" id="menu-toggle">☰</div>
   </header>
 
   <main class="game-details-container">
