responsividade para mobile user ajustadas para a página de game details

--- a/game-detail.html
+++ b/game-detail.html
@@ -49,15 +49,10 @@
       </div>
 
       <div class="right-panel">
-        <h2>Screenshot</h2>
-        <div id="screenshots" class="screenshots-grid"></div>
         <div class="game-box">
           <img id="box-image" class="box-image" src="" alt="Capa do jogo">
         </div>
-
-        <button class="btn-primary" id="btn-avaliar">
-          Avaliar este jogo
-        </button>
+        <button class="btn-primary" id="btn-avaliar">Avaliar este Jogo</button>
       </div>
     </section>
   </main>
