Add mobile screenshots section to game detail
Added a section for mobile screenshots in the game detail page.

--- a/game-detail.html
+++ b/game-detail.html
@@ -34,6 +34,11 @@
         <h2>Sobre este jogo</h2>
         <p id="game-description" class="game-description"></p>
 
+        <div id="mobile-screenshots-container">
+          <h2>Screenshots</h2>
+          <div id="screenshots" class="screenshots-grid"></div>
+        </div>
+
         <h2>Informações do Jogo</h2>
         <div id="game-info-box" class="info-box">
           <p><strong>Data de lançamento:</strong> <span id="info-release"></span></p>
